--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,14 @@
     "lib": [
       "es2018",
       "dom"
-    ]
-  },
-  "angularCompilerOptions": {
-    "enableI18nLegacyMessageIdFormat": false
+    ],
+      "paths": {
+        "@app/*": ["src/app/*"],
+          "@core": ["src/app/@core"],
+        "@core/*": ["src/app/@core/*"],
+        "@shared": ["src/app/@shared"],
+        "@shared/*": ["src/app/@shared/*"],
+          "@env/*": ["src/environments/*"]
+      }
   }
 }
